--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+maxima (5.41.1-0) unstable; urgency=medium
+
+  * The newest upstream release
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sat, 19 Jan 2019 08:18:00 +0000
+
 maxima (5.41.0-7) unstable; urgency=medium
 
   * Copied all improvements from the Nightly Build
