--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+maxima (5.42.0-1) unstable; urgency=medium
+
+  * The newest upstream release
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 23 Jan 2019 06:33:14 +0000
+
 maxima (5.41.0-6) unstable; urgency=medium
 
   * Actually install the common files maxima depends on.
