Correctly support cat entries for functions and variables
Define new texinfo macro, catentries, that takes two args: the index
name and the category.  This is needed so that the category entry can
link to the correct section in either the function or variable
documentation category appendices.

--- a/doc/info/category-macros.texi
+++ b/doc/info/category-macros.texi
@@ -64,6 +64,13 @@
 @ref{Category: \name\}
 @end macro
 
+@macro catentries {idx, name}
+@html
+&middot;
+@end html
+@ref{Category: \idx\-\name\, Category: \name\}
+@end macro
+
 @macro closecatbox {}
 @html
 </div>
@@ -110,6 +117,9 @@
 @end macro
 
 @macro category {name}
+@end macro
+
+@macro catentries {idx, name}
 @end macro
 
 @macro closecatbox {}
