Updated the version number.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+maxima (5.43.0-1) unstable; urgency=medium
+
+  * The newest upstream release
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sun, 26 May 2019 12:47:14 +0000
+
 maxima (5.42.2-1) unstable; urgency=medium
 
   * The newest upstream release
