--- a/debian/changelog
+++ b/debian/changelog
@@ -1,70 +1,61 @@
-maxima (5.42.2-0) unstable; urgency=medium
+maxima (5.43.0-1) unstable; urgency=medium
 
   * The newest upstream release
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 23 Jan 2019 08:18:00 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sun, 26 May 2019 12:47:14 +0000
 
-maxima (5.41.1-0) unstable; urgency=medium
+maxima (5.42.2-1) unstable; urgency=medium
 
   * The newest upstream release
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sat, 19 Jan 2019 08:18:00 +0000
-
-maxima (5.41.0-7) unstable; urgency=medium
-
-  * Copied all improvements from the Nightly Build
-
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 27 Jun 2018 08:18:00 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 23 Jan 2019 06:33:14 +0000
 
 maxima (5.41.0-6) unstable; urgency=medium
 
-  * gcl and ecl depend on gcc for loading share packages.
+  * Actually install the common files maxima depends on.
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Thu, 2 Nov 2017 18:52:14 +0000
-
-maxima (5.41.0-6) unstable; urgency=medium
-
-  * Enable the gcl build.
-
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 1 Nov 2017 10:07:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 25 Oct 2017 20:58:14 +0000
 
 maxima (5.41.0-5) unstable; urgency=medium
 
-  * Create a image that is independent of the lisps installed on the system for
-    clisp, too.
+  * A few missing dependencies.
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Tue, 31 Oct 2017 13:37:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 25 Oct 2017 20:44:14 +0000
 
 maxima (5.41.0-4) unstable; urgency=medium
 
-  * Merged maxima-doc and maxima-common: No need to split the program in this
-    many packages.
+  * Tried to correct the ChangeLog.
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sat, 28 Oct 2017 08:45:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 25 Oct 2017 08:48:14 +0000
 
 maxima (5.41.0-3) unstable; urgency=medium
 
-  * Enabled the sbcl-build that is reasonably fast and doesn't require the system
-    to contain a specific sbcl install.
-  * Found a way to split maxima into maxima-clisp and maxima-sbcl
+  * Another try to split the program into one package per compiler.
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 25 Oct 2017 19:55:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Wed, 25 Oct 2017 08:16:14 +0000
 
 maxima (5.41.0-2) unstable; urgency=medium
 
-  * debian/rules: Add the lisp index to the info files we need to distribute.
+  * New upstream release
+  * Disabled ECL as it currently is broken in Ubuntu.
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sun, 08 Oct 2017 10:01:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sun, 01 Oct 2017 12:04:14 +0000
 
 maxima (5.41.0-1) unstable; urgency=medium
 
   * New upstream release
-  * Dropped all the patches
-  * Dropped most of the the division into separate packages
-  * Tried to minimize the debian build instructions
-  * Changed the lisp from gcl to clisp
+  * Changed the lisp to sbcl+clisp+ecl
 
- -- Gunter Königsmann <wxmaxima@physikbuch.de>  Thu, 05 Oct 2017 10:01:14 +0000
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Sun, 01 Oct 2017 06:01:14 +0000
+
+maxima (5.40.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * Dropped all the patches
+  * Dropped the division into separate packages
+  * Changed the lisp from gcl to sbcl+clisp
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Thu, 01 Jun 2017 06:01:14 +0000
 
 maxima (5.39.0-2) unstable; urgency=medium
 
