In Texinfo documentation, attempt to rationalize prev/next links around odepack-pkg. This is an attempt to fix errors when installing on MacOS via Homebrew.
(cherry picked from commit 19eb564453a3579185276e2134767200ac14c908)

--- a/doc/info/numericalio.texi
+++ b/doc/info/numericalio.texi
@@ -4,7 +4,7 @@
 * Functions and Variables for binary input and output::
 @end menu
 
-@node Introduction to numericalio, Functions and Variables for plain-text input and output, odepack-pkg, numericalio-pkg
+@node Introduction to numericalio, Functions and Variables for plain-text input and output, mnewton-pkg, numericalio-pkg
 @section Introduction to numericalio
 
 @code{numericalio} is a collection of functions to read and write files and streams.
