--- a/interfaces/emacs/imaxima/imaxima.texi
+++ b/interfaces/emacs/imaxima/imaxima.texi
@@ -60,12 +60,13 @@ algebra system Maxima as images typeset by @TeX{}.
 
 This manual documents imaxima version @value{VERSION}. You can
 download the latest version of imaxima from
-@uref{http://members3.jcom.home.ne.jp/imaxima/}.
+@uref{http://maxima.sourceforge.net/, the Maxima website}.
 
 Since version 1.0b, imaxima and imath supports inline graph. 
 
-Send suggestions and bug reports to @email{imaxima@@mac.com, Yasuaki
-Honda}. 
+Send suggestions and bug reports to
+@email{maxima-discuss@@lists.sourceforge.net, the Maxima email list} or
+@uref{https://sourceforge.net/p/maxima/bugs/, the Maxima bug tracker}.
 
 @menu
 * Installation::      Installing imaxima (and breqn).
@@ -108,17 +109,14 @@ If you use Interactive Math minor mode, put
 in your @file{.emacs} file.
 
 
-To do line breaking imaxima requires the LaTeX package @code{breqn}. This
-package is officially distributed by Morten Høgholm from
-@uref{http://www.ctan.org/tex-archive/macros/latex/contrib/mh} as mh.zip.
+To do line breaking imaxima requires the LaTeX package
+@code{breqn}. This package is currently distributed from
+@uref{https://ctan.org/pkg/breqn, its CTAN webpage} as
+@uref{http://mirrors.ctan.org/install/macros/latex/contrib/breqn.tds.zip,
+breqn.tds.zip}.
 
-Alternatively, for the easy installation, you may download
-@uref{http://members3.jcom.home.ne.jp/imaxima/breqn097a.zip}. 
-Compared to mh.zip, breqn097a.zip contains all the @file{*.sty} and
-@file{*.sym} files in it.
-
-The files in @code{breqn} must be installed in a place where @TeX{}
-can find them.  In a typical teTeX installation you should put the
+The files in @code{breqn} must be installed in a place where @TeX{} can
+find them. In a typical LeTeX installation you should put the
 @file{*.sty} and @file{*.sym} files in
 
 @example
