--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+maxima (5.44.0-1) unstable; urgency=medium
+
+  * The newest upstream release
+
+ -- Gunter Königsmann <wxmaxima@physikbuch.de>  Mon, 08 Jun 2020 22:34:14 +0000
+
 maxima (5.43.2-1) unstable; urgency=medium
 
   * The newest upstream release
