Make the function bug_report findable via "?? bugs" by putting @fnindex Bugs into the documentation item for bug_report.
Also remove the node for "Known bugs" in the documentation for the package engineering-format.

(cherry picked from commit 939b44705a685b3c9a443b91f4fbf8f4447cf405)

--- a/doc/info/Bugs.texi
+++ b/doc/info/Bugs.texi
@@ -101,6 +101,9 @@ directory that is run as a part of the test suite by
 @c -----------------------------------------------------------------------------
 @anchor{bug_report}
 @deffn {Function} bug_report ()
+@ifinfo
+@fnindex Bugs
+@end ifinfo
 
 Prints out Maxima and Lisp version numbers, and gives a link
 to the Maxima project bug report web page.
