--- a/doc/info/engineering-format.texi
+++ b/doc/info/engineering-format.texi
@@ -3,10 +3,9 @@ to the notation engineers are used to: @code{a*10^b} with @code{b} dividable by
 three.
 @menu
 * Functions and Variables for engineering-format::
-* Known bugs in engineering-format::
 @end menu
 
-@node Functions and Variables for engineering-format, Known bugs in engineering-format, engineering-format-pkg, engineering-format-pkg
+@node Functions and Variables for engineering-format, , engineering-format-pkg, engineering-format-pkg
 @section Functions and Variables for engineering-format
 
 @c -----------------------------------------------------------------------------
@@ -106,12 +105,3 @@ See also @mref{engineering_format_min} and @mrefdot{engineering_format_floats}
 @category{Share packages}
 @closecatbox
 @end defvr
-
-
-@c -----------------------------------------------------------------------------
-@node Known bugs in engineering-format, , Functions and Variables for engineering-format, engineering-format-pkg
-@section Known Bugs
-
-The output routine of SBCL 1.3.0 has a bug that sometimes causes the exponent not
-to be dividable by three. The value of the displayed number is still valid in
-this case.
