--- a/ChangeLog
+++ b/ChangeLog
@@ -17,3 +17,12 @@ Changes in the Windows installer:
 
 (*) These changes were already included in the binary Windows installer
     for 5.45.0, they were discovered, after the source code release was made.
+
+Bug fixes for numbered bugs:
+----------------------------
+ * #926: sign errors in cartan package
+ * #3789: package ezunits: ev(dimensions(u), nouns) stack overflow
+ * #3793: plot2d fails on small x-range
+ * #3796 plot3d doesn't support rotation in 5.45
+ * #3797: plot2d(0, ...) gives "can't plot with empty y range" -- regression
+ * #3801: error sourcing .xmaximarc on Windows
