--- a/doc/info/Elliptic.texi
+++ b/doc/info/Elliptic.texi
@@ -501,3 +501,90 @@ terms of @math{Gamma} functions.  Use @code{makegamma} to evaluate them.
 @closecatbox
 @end deffn
 
+@anchor{carlson_rc}
+@deffn {Function} carlson_rc (@var{x}, @var{y})
+Carlson's RC integral defined as
+
+@ifnotinfo
+@tex
+$$R_c(x, y) = \int_0^{\infty} {1\over{2}} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
+@end tex
+@ifset mathjax
+@html
+$$R_c(x,y) = \int_0^{\infty} {1\over{2}} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
+@end html
+@end ifset
+@ifclear mathjax
+@math{integrate(1/2*(t+x)^(-1/2)/(t+y), t, 0, inf)}
+@end ifclear
+@end ifnotinfo
+@ifinfo
+@math{integrate(1/2*(t+x)^(-1/2)/(t+y), t, 0, inf)}
+@end ifinfo
+This integral is related to many elementary functions in the following
+way:
+@ifnotinfo
+@tex
+$$
+\eqalign{
+\log x &= (x-1) R_c\left(\left({{1+x}\over{2}}\right)^2, x\right), x > 0 \cr
+\sin^{-1} x &= x R_c(1-x^2, 1), |x| \le 1 \cr
+\cos^{-1} x &= \sqrt{1-x^2} R_c(x^2,1), 0 \le x \le 1  \cr
+\tan^{-1} x &= x  R_c(1,1+x^2)  \cr
+\sinh^{-1} x &= x  R_c(1+x^2,1)  \cr
+\cosh^{-1} x &= \sqrt{x^2-1}  R_c(x^2,1), x \ge 1  \cr
+\tanh^{-1}(x) &= x  R_c(1,1-x^2), |x| \le 1
+}
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+\begin{align*}
+\log x &= (x-1) R_c\left(\left[\frac{1+x}{2}\right]^2, x\right), & x > 0 \\
+\sin^{-1} x &= x R_c(1-x^2, 1), & |x|\le 1 \\
+\cos^{-1} x &= \sqrt{1-x^2} R_c(x^2,1), & 0 \le x \le 1 \\
+\tan^{-1} x &= x  R_c(1,1+x^2) \\
+\sinh^{-1} x &= x  R_c(1+x^2,1) \\
+\cosh^{-1} x &= \sqrt{x^2-1}  R_c(x^2,1), & x \ge 1 \\
+\tanh^{-1} x &= x  R_c(1,1-x^2), & |x|\le 1 \\
+\end{align*}
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@math{log(x)  = (x-1)*rc(((1+x)/2)^2, x), x > 0}
+@math{asin(x) = x * rc(1-x^2, 1), |x|<= 1}
+@math{acos(x) = sqrt(1-x^2)*rc(x^2,1), 0 <= x <=1}
+@math{atan(x) = x * rc(1,1+x^2)}
+@math{asinh(x) = x * rc(1+x^2,1)}
+@math{acosh(x) = sqrt(x^2-1) * rc(x^2,1), x >= 1}
+@math{atanh(x) = x * rc(1,1-x^2), |x|<=1}
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{log(x)  = (x-1)*rc(((1+x)/2)^2, x), x > 0}
+
+@math{asin(x) = x * rc(1-x^2, 1), |x|<= 1}
+
+@math{acos(x) = sqrt(1-x^2)*rc(x^2,1), 0 <= x <=1}
+
+@math{atan(x) = x * rc(1,1+x^2)}
+
+@math{asinh(x) = x * rc(1+x^2,1)}
+
+@math{acosh(x) = sqrt(x^2-1) * rc(x^2,1), x >= 1}
+
+@math{atanh(x) = x * rc(1,1-x^2), |x|<=1}
+
+@end ifinfo
+
+@tex
+@end tex
+
+@opencatbox
+@category{Elliptic integrals}
+@closecatbox
+@end deffn
+
