--- a/doc/info/Elliptic.texi
+++ b/doc/info/Elliptic.texi
@@ -503,7 +503,7 @@ terms of @math{Gamma} functions.  Use @code{makegamma} to evaluate them.
 
 @anchor{carlson_rc}
 @deffn {Function} carlson_rc (@var{x}, @var{y})
-Carlson's RC integral defined as
+Carlson's RC integral is defined by
 
 @ifnotinfo
 @tex
@@ -580,8 +580,181 @@ $$
 
 @end ifinfo
 
+Also, we have the relationship
+@ifnotinfo
 @tex
+$$
+R_c(x,y) = R_f(x,y,y)
+$$
 @end tex
+@ifset mathjax
+@html
+$$
+R_c(x,y) = R_f(x,y,y)
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{R_c(x,y) = R_f(x,y,y)}
+@end ifinfo
+
+@opencatbox
+@category{Elliptic integrals}
+@closecatbox
+@end deffn
+
+@anchor{carlson_rd}
+@deffn {Function} carlson_rd (@var{x}, @var{y}, @var{z})
+Carlson's RD integral is defined by
+
+@ifnotinfo
+@tex
+$$
+R_d(x,y,z) = {3\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}}\, dt
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+R_d(x,y,z) = \frac{3}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}\, dt
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+@math{R_d(x,y,z) = 3/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+z)), t, 0, inf)}
+@end ifinfo
+
+We also have the special value
+@ifnotinfo
+@tex
+$$
+R_d(0,2,1) = 3 \sqrt{\pi} {\Gamma({3\over 4}) \over \Gamma({1\over 4})}
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+R_d(0, 2, 1) = 3 \sqrt{\pi}\, \frac{\Gamma(\frac{3}{4})}{\Gamma(\frac{1}{4})}
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{R_d(0,2,1) = 3 sqrt(%pi) gamma(3/4)/gamma(1/4)}
+@end ifinfo
+
+It is also related to the complete elliptic E function as follows
+@ifnotinfo
+@tex
+$$
+E(m) = R_f(0, 1 - m, 1) - {m \over 3} R_d(0, 1 - m, 1)
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+E(m) = R_f(0, 1 - m, 1) - \frac{m}{3} R_d(0, 1 - m, 1)
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{E(m) = R_f(0, 1 - m, 1) - (m/3)* R_d(0, 1 - m, 1)}
+@end ifinfo
+
+@opencatbox
+@category{Elliptic integrals}
+@closecatbox
+@end deffn
+
+@anchor{carlson_rf}
+@deffn {Function} carlson_rf (@var{x}, @var{y}, @var{z})
+Carlson's RF integral is defined by
+
+@ifnotinfo
+@tex
+$$
+R_f(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}}\, dt
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+R_f(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+@math{R_f(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)), t, 0, inf)}
+@end ifinfo
+
+
+It is also related to the complete elliptic E function as follows
+@ifnotinfo
+@tex
+$$
+E(m) = R_f(0, 1 - m, 1) - {m \over 3} R_d(0, 1 - m, 1)
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+E(m) = R_f(0, 1 - m, 1) - \frac{m}{3} R_d(0, 1 - m, 1)
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{E(m) = R_f(0, 1 - m, 1) - (m/3)* R_d(0, 1 - m, 1)}
+@end ifinfo
+
+@opencatbox
+@category{Elliptic integrals}
+@closecatbox
+@end deffn
+
+@anchor{carlson_rj}
+@deffn {Function} carlson_rj (@var{x}, @var{y}, @var{z}, @var{p})
+Carlson's RJ integral is defined by
+
+@ifnotinfo
+@tex
+$$
+R_j(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+p)}}\, dt
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+R_j(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+@math{R_j(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+p)), t, 0, inf)}
+@end ifinfo
 
 @opencatbox
 @category{Elliptic integrals}
