--- a/doc/info/Elliptic.texi
+++ b/doc/info/Elliptic.texi
@@ -507,11 +507,11 @@ Carlson's RC integral is defined by
 
 @ifnotinfo
 @tex
-$$R_c(x, y) = \int_0^{\infty} {1\over{2}} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
+$$R_C(x, y) = {1\over{2}} \int_0^{\infty} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
 @end tex
 @ifset mathjax
 @html
-$$R_c(x,y) = \int_0^{\infty} {1\over{2}} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
+$$R_C(x, y) = {1\over{2}} \int_0^{\infty} {1\over{\sqrt{t+x}(t+y)}}\, dt$$
 @end html
 @end ifset
 @ifclear mathjax
@@ -527,13 +527,13 @@ way:
 @tex
 $$
 \eqalign{
-\log x &= (x-1) R_c\left(\left({{1+x}\over{2}}\right)^2, x\right), x > 0 \cr
-\sin^{-1} x &= x R_c(1-x^2, 1), |x| \le 1 \cr
-\cos^{-1} x &= \sqrt{1-x^2} R_c(x^2,1), 0 \le x \le 1  \cr
-\tan^{-1} x &= x  R_c(1,1+x^2)  \cr
-\sinh^{-1} x &= x  R_c(1+x^2,1)  \cr
-\cosh^{-1} x &= \sqrt{x^2-1}  R_c(x^2,1), x \ge 1  \cr
-\tanh^{-1}(x) &= x  R_c(1,1-x^2), |x| \le 1
+\log x &= (x-1) R_C\left(\left({{1+x}\over{2}}\right)^2, x\right), x > 0 \cr
+\sin^{-1} x &= x R_C(1-x^2, 1), |x| \le 1 \cr
+\cos^{-1} x &= \sqrt{1-x^2} R_C(x^2,1), 0 \le x \le 1  \cr
+\tan^{-1} x &= x  R_C(1,1+x^2)  \cr
+\sinh^{-1} x &= x  R_C(1+x^2,1)  \cr
+\cosh^{-1} x &= \sqrt{x^2-1}  R_C(x^2,1), x \ge 1  \cr
+\tanh^{-1}(x) &= x  R_C(1,1-x^2), |x| \le 1
 }
 $$
 @end tex
@@ -541,13 +541,13 @@ $$
 @html
 $$
 \begin{align*}
-\log x &= (x-1) R_c\left(\left[\frac{1+x}{2}\right]^2, x\right), & x > 0 \\
-\sin^{-1} x &= x R_c(1-x^2, 1), & |x|\le 1 \\
-\cos^{-1} x &= \sqrt{1-x^2} R_c(x^2,1), & 0 \le x \le 1 \\
-\tan^{-1} x &= x  R_c(1,1+x^2) \\
-\sinh^{-1} x &= x  R_c(1+x^2,1) \\
-\cosh^{-1} x &= \sqrt{x^2-1}  R_c(x^2,1), & x \ge 1 \\
-\tanh^{-1} x &= x  R_c(1,1-x^2), & |x|\le 1 \\
+\log x &= (x-1) R_C\left(\left[\frac{1+x}{2}\right]^2, x\right), & x > 0 \\
+\sin^{-1} x &= x R_C(1-x^2, 1), & |x|\le 1 \\
+\cos^{-1} x &= \sqrt{1-x^2} R_C(x^2,1), & 0 \le x \le 1 \\
+\tan^{-1} x &= x  R_C(1,1+x^2) \\
+\sinh^{-1} x &= x  R_C(1+x^2,1) \\
+\cosh^{-1} x &= \sqrt{x^2-1}  R_C(x^2,1), & x \ge 1 \\
+\tanh^{-1} x &= x  R_C(1,1-x^2), & |x|\le 1 \\
 \end{align*}
 $$
 @end html
@@ -584,13 +584,13 @@ Also, we have the relationship
 @ifnotinfo
 @tex
 $$
-R_c(x,y) = R_f(x,y,y)
+R_C(x,y) = R_F(x,y,y)
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-R_c(x,y) = R_f(x,y,y)
+R_C(x,y) = R_F(x,y,y)
 $$
 @end html
 @end ifset
@@ -599,7 +599,7 @@ $$
 @end ifnotinfo
 @ifinfo
 
-@math{R_c(x,y) = R_f(x,y,y)}
+@math{R_C(x,y) = R_F(x,y,y)}
 @end ifinfo
 
 @opencatbox
@@ -614,13 +614,13 @@ Carlson's RD integral is defined by
 @ifnotinfo
 @tex
 $$
-R_d(x,y,z) = {3\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}}\, dt
+R_D(x,y,z) = {3\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}}\, dt
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-R_d(x,y,z) = \frac{3}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}\, dt
+R_D(x,y,z) = \frac{3}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+z)}\, dt
 $$
 @end html
 @end ifset
@@ -628,20 +628,20 @@ $$
 @end ifclear
 @end ifnotinfo
 @ifinfo
-@math{R_d(x,y,z) = 3/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+z)), t, 0, inf)}
+@math{R_D(x,y,z) = 3/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+z)), t, 0, inf)}
 @end ifinfo
 
 We also have the special value
 @ifnotinfo
 @tex
 $$
-R_d(0,2,1) = 3 \sqrt{\pi} {\Gamma({3\over 4}) \over \Gamma({1\over 4})}
+R_D(0,2,1) = 3 \sqrt{\pi} {\Gamma({3\over 4}) \over \Gamma({1\over 4})}
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-R_d(0, 2, 1) = 3 \sqrt{\pi}\, \frac{\Gamma(\frac{3}{4})}{\Gamma(\frac{1}{4})}
+R_D(0, 2, 1) = 3 \sqrt{\pi}\, \frac{\Gamma(\frac{3}{4})}{\Gamma(\frac{1}{4})}
 $$
 @end html
 @end ifset
@@ -650,20 +650,20 @@ $$
 @end ifnotinfo
 @ifinfo
 
-@math{R_d(0,2,1) = 3 sqrt(%pi) gamma(3/4)/gamma(1/4)}
+@math{R_D(0,2,1) = 3 sqrt(%pi) gamma(3/4)/gamma(1/4)}
 @end ifinfo
 
 It is also related to the complete elliptic E function as follows
 @ifnotinfo
 @tex
 $$
-E(m) = R_f(0, 1 - m, 1) - {m \over 3} R_d(0, 1 - m, 1)
+E(m) = R_F(0, 1 - m, 1) - {m \over 3} R_D(0, 1 - m, 1)
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-E(m) = R_f(0, 1 - m, 1) - \frac{m}{3} R_d(0, 1 - m, 1)
+E(m) = R_F(0, 1 - m, 1) - \frac{m}{3} R_D(0, 1 - m, 1)
 $$
 @end html
 @end ifset
@@ -672,7 +672,7 @@ $$
 @end ifnotinfo
 @ifinfo
 
-@math{E(m) = R_f(0, 1 - m, 1) - (m/3)* R_d(0, 1 - m, 1)}
+@math{E(m) = R_F(0, 1 - m, 1) - (m/3)* R_D(0, 1 - m, 1)}
 @end ifinfo
 
 @opencatbox
@@ -687,13 +687,13 @@ Carlson's RF integral is defined by
 @ifnotinfo
 @tex
 $$
-R_f(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}}\, dt
+R_F(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}}\, dt
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-R_f(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
+R_F(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
 $$
 @end html
 @end ifset
@@ -701,7 +701,7 @@ $$
 @end ifclear
 @end ifnotinfo
 @ifinfo
-@math{R_f(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)), t, 0, inf)}
+@math{R_F(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)), t, 0, inf)}
 @end ifinfo
 
 
@@ -709,13 +709,13 @@ It is also related to the complete elliptic E function as follows
 @ifnotinfo
 @tex
 $$
-E(m) = R_f(0, 1 - m, 1) - {m \over 3} R_d(0, 1 - m, 1)
+E(m) = R_F(0, 1 - m, 1) - {m \over 3} R_D(0, 1 - m, 1)
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-E(m) = R_f(0, 1 - m, 1) - \frac{m}{3} R_d(0, 1 - m, 1)
+E(m) = R_F(0, 1 - m, 1) - \frac{m}{3} R_D(0, 1 - m, 1)
 $$
 @end html
 @end ifset
@@ -724,7 +724,7 @@ $$
 @end ifnotinfo
 @ifinfo
 
-@math{E(m) = R_f(0, 1 - m, 1) - (m/3)* R_d(0, 1 - m, 1)}
+@math{E(m) = R_F(0, 1 - m, 1) - (m/3)* R_D(0, 1 - m, 1)}
 @end ifinfo
 
 @opencatbox
@@ -739,13 +739,13 @@ Carlson's RJ integral is defined by
 @ifnotinfo
 @tex
 $$
-R_j(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+p)}}\, dt
+R_J(x,y,z) = {1\over 2} \int_0^{\infty} {1\over{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}\,(t+p)}}\, dt
 $$
 @end tex
 @ifset mathjax
 @html
 $$
-R_j(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
+R_J(x,y,z) = \frac{1}{2}\int_0^{\infty}\frac{1}{\sqrt{t+x}\sqrt{t+y}\sqrt{t+z}}\, dt
 $$
 @end html
 @end ifset
@@ -753,7 +753,7 @@ $$
 @end ifclear
 @end ifnotinfo
 @ifinfo
-@math{R_j(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+p)), t, 0, inf)}
+@math{R_J(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)*(t+p)), t, 0, inf)}
 @end ifinfo
 
 @opencatbox
