--- a/doc/info/Elliptic.texi
+++ b/doc/info/Elliptic.texi
@@ -602,6 +602,47 @@ $$
 @math{R_C(x,y) = R_F(x,y,y)}
 @end ifinfo
 
+Some special values:
+@ifnotinfo
+@tex
+$$
+\eqalign{R_C(0, 1) &= {\pi\over 2} \cr
+R_C(0, 1/4) &= \pi \cr
+R_C(2,1) &= \log(\sqrt{2} + 1) \cr
+R_C(i,i+1) &= {\pi\over 4} + {i\over 2} \log(\sqrt{2}-1) \cr
+R_C(0,i) &= (1-i){\pi\over {2\sqrt{2}}} \cr
+}
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+\eqalign{R_C(0, 1) &= {\pi\over 2} \cr
+R_C(0, 1/4) &= \pi \cr
+R_C(2,1) &= \log(\sqrt{2} + 1) \cr
+R_C(i,i+1) &= {\pi\over 4} + {i\over 2} \log(\sqrt{2}-1) \cr
+R_C(0,i) &= (1-i){\pi\over {2\sqrt{2}}} \cr
+}
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+
+@ifinfo
+
+@math{R_C(0,1) = %pi/2}
+
+@math{R_C(0,1/4) = %pi}
+
+@math{R_C(2,1) = log(sqrt(2)+1)}
+
+@math{R_C(%i, %i+1) = %pi/4 + %i/2*log(sqrt(2)+1)}
+
+@math{R_C(0, %i) = (1-%i)*%pi/(2*sqrt(2))}
+@end ifinfo
+
 @opencatbox
 @category{Elliptic integrals}
 @closecatbox
@@ -635,11 +676,23 @@ We also have the special value
 @ifnotinfo
 @tex
 $$
+R_D(x,x,x) = x^{-{3\over{2}}}
+$$
+$$
+R_D(0,y,y) = {3\over 4} \pi y^{-{3\over 2}}
+$$
+$$
 R_D(0,2,1) = 3 \sqrt{\pi} {\Gamma({3\over 4}) \over \Gamma({1\over 4})}
 $$
 @end tex
 @ifset mathjax
 @html
+$$
+R_D(x,x,x) = x^{-{3\over{2}}}
+$$
+$$
+R_D(0,y,y) = {3\over 4} \pi y^{-{3\over 2}}
+$$
 $$
 R_D(0, 2, 1) = 3 \sqrt{\pi}\, \frac{\Gamma(\frac{3}{4})}{\Gamma(\frac{1}{4})}
 $$
@@ -649,6 +702,10 @@ $$
 @end ifclear
 @end ifnotinfo
 @ifinfo
+
+@math{R_D(x,x,x) = x^(-3/2)}
+
+@math{R_D(0,y,y) = 3/4*%pi*y^(-3/2)}
 
 @math{R_D(0,2,1) = 3 sqrt(%pi) gamma(3/4)/gamma(1/4)}
 @end ifinfo
@@ -704,6 +761,35 @@ $$
 @math{R_F(x,y,z) = 1/2*integrate(1/(sqrt(t+x)*sqrt(t+y)*sqrt(t+z)), t, 0, inf)}
 @end ifinfo
 
+We also have the special values
+@ifnotinfo
+@tex
+$$
+\eqalign{
+R_F(0,1,2) &= {{\Gamma({1\over 4})^2}\over{4\sqrt{2\pi}}} \cr
+R_F(i,-i,0) &= {{\Gamma({1\over 4})^2}\over {4\sqrt{\pi}}}
+}
+$$
+@end tex
+@ifset mathjax
+@html
+$$
+\eqalign{
+R_F(0,1,2) &= {{\Gamma({1\over 4})^2}\over{4\sqrt{2\pi}}} \cr
+R_F(i,-i,0) &= {{\Gamma({1\over 4})^2}\over {4\sqrt{\pi}}}
+}
+$$
+@end html
+@end ifset
+@ifclear mathjax
+@end ifclear
+@end ifnotinfo
+@ifinfo
+
+@math{R_F(0,1,2) = gamma(1/4)^2/(4*sqrt(2*%pi))}
+
+@math{R_F(%i,-%i,0) = gamma(1/4)^2/(4*sqrt(%pi))}
+@end ifinfo
 
 It is also related to the complete elliptic E function as follows
 @ifnotinfo
