The document language for the russian manual was wrong

--- a/doc/info/ru/maxima.texi
+++ b/doc/info/ru/maxima.texi
@@ -1,7 +1,7 @@
 \input ../texinfo
 @setfilename  maxima.info
 @documentencoding UTF-8
-@documentlanguage de
+@documentlanguage ru
 @include include-maxima.texi
 @bye
 
